# cross-signal-data

./: .gitignore  CHANGELOG.md  HF_UPLOAD_GUIDE.md  README.md  pyproject.toml
data/: crashes_v1.csv
docs/: methodology.md  schema.md
notebooks/: baseline_model.py
scripts/: extract.py
src/cross_signal_data/: __init__.py  load.py
tests/: test_load.py
