[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-signal-data"
version = "0.1.0"
description = "Polymarket crash-recovery labeled dataset (308 trades, 80.2% WR). Public ground truth for prediction-market mean-reversion research."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "LuciferForge", email = "manja316@gmail.com" }
]
keywords = ["polymarket", "prediction-markets", "dataset", "trading", "mean-reversion", "crypto", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
ml = ["pandas>=1.5", "scikit-learn>=1.3", "numpy>=1.24"]
dev = ["pytest>=7", "pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/LuciferForge/cross-signal-data"
Repository = "https://github.com/LuciferForge/cross-signal-data"
Issues = "https://github.com/LuciferForge/cross-signal-data/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cross_signal_data = ["data/*.csv"]
